# LensNote

./: CMakeLists.txt  README.md
environment/: landscape.json  portrait.json
include/LensNote/: LensNote.h
project/: LensNote.cpp
src/: Algorithms.cpp  LensNote.cpp  exif.cpp
